--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,53 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - iCable Operator App</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.7;
+      color: #333;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #0056b3;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+      font-weight: 600;
+    }
+
+    main {
+      max-width: 900px;
+      background-color: #fff;
+      margin: 40px auto;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      color: #0056b3;
+      border-left: 4px solid #0056b3;
+      padding-left: 10px;
+      margin-top: 30px;
+      font-size: 1.3em;
+    }
+
+    p, ul {
+      margin-bottom: 16px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    a {
+      color: #0078ff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9em;
+      color: #666;
+      padding: 20px;
+      margin-top: 20px;
+      border-top: 1px solid #ddd;
+    }
+
+    @media (max-width: 600px) {
+      main {
+        margin: 20px;
+        padding: 20px;
+      }
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; line-height: 1.6; margin: 40px;">
-  <h1>Privacy Policy for iCable Operator App</h1>
-  <p><strong>Last updated:</strong> November 8, 2025</p>
+<body>
+  <header>
+    <h1>Privacy Policy for iCable Operator App</h1>
+    <p>Last updated: November 8, 2025</p>
+  </header>
 
-  <h2>1. Introduction</h2>
-  <p>Welcome to <strong>iCable Operator App</strong> (“we”, “our”, “us”). This Privacy Policy describes how we handle your information when you use our mobile application <strong>iCable Operator App</strong> (the “App”).</p>
+  <main>
+    <h2>1. Introduction</h2>
+    <p>Welcome to <strong>iCable Operator App</strong> (“we”, “our”, “us”). This Privacy Policy describes how we handle your information when you use our mobile application <strong>iCable Operator App</strong> (the “App”).</p>
 
-  <h2>2. Information We Collect</h2>
-  <p>The App may collect the following types of information:</p>
-  <ul>
-    <li><strong>Camera Access:</strong> The App may request permission to use your device’s camera to capture photos for purposes such as user profile images or customer verification. We do not store or share these photos unless necessary to provide the App’s functionality.</li>
-    <li><strong>Device Information:</strong> Basic device and usage information may be collected through third-party services (e.g., Firebase) to improve performance and ensure stability.</li>
-    <li><strong>Notifications Data:</strong> The App uses Firebase Cloud Messaging to send important notifications. Notification tokens may be stored to deliver messages but are not shared with unauthorized parties.</li>
-  </ul>
+    <h2>2. Information We Collect</h2>
+    <p>The App may collect the following types of information:</p>
+    <ul>
+      <li><strong>Camera Access:</strong> The App may request permission to use your device’s camera to capture photos for purposes such as user profile images or customer verification. We do not store or share these photos unless necessary to provide the App’s functionality.</li>
+      <li><strong>Device Information:</strong> Basic device and usage information may be collected through third-party services (e.g., Firebase) to improve performance and ensure stability.</li>
+      <li><strong>Notifications Data:</strong> The App uses Firebase Cloud Messaging to send important notifications. Notification tokens may be stored to deliver messages but are not shared with unauthorized parties.</li>
+    </ul>
 
-  <h2>3. How We Use Your Information</h2>
-  <ul>
-    <li>Enable App functionality (e.g., image uploads, notifications).</li>
-    <li>Improve user experience and performance.</li>
-    <li>Provide customer support when requested.</li>
-  </ul>
-  <p>We do not sell, rent, or trade your personal information.</p>
+    <h2>3. How We Use Your Information</h2>
+    <ul>
+      <li>Enable App functionality (e.g., image uploads, notifications).</li>
+      <li>Improve user experience and performance.</li>
+      <li>Provide customer support when requested.</li>
+    </ul>
+    <p>We do not sell, rent, or trade your personal information.</p>
 
-  <h2>4. Third-Party Services</h2>
-  <p>The App uses third-party services that may collect data in accordance with their own privacy policies, including:</p>
-  <ul>
-    <li>Firebase Analytics – for anonymous usage statistics.</li>
-    <li>Firebase Messaging – for push notifications.</li>
-    <li>Firebase Core – for basic app functionality.</li>
-  </ul>
-  <p>Google Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
+    <h2>4. Third-Party Services</h2>
+    <p>The App uses third-party services that may collect data in accordance with their own privacy policies, including:</p>
+    <ul>
+      <li>Firebase Analytics – for anonymous usage statistics.</li>
+      <li>Firebase Messaging – for push notifications.</li>
+      <li>Firebase Core – for basic app functionality.</li>
+    </ul>
+    <p>Google Privacy Policy: <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a></p>
 
-  <h2>5. Data Security</h2>
-  <p>We take reasonable precautions to protect your information against unauthorized access, alteration, or destruction. However, no method of transmission over the Internet or electronic storage is completely secure.</p>
+    <h2>5. Data Security</h2>
+    <p>We take reasonable precautions to protect your information against unauthorized access, alteration, or destruction. However, no method of transmission over the Internet or electronic storage is completely secure.</p>
 
-  <h2>6. Children’s Privacy</h2>
-  <p>Our App is not directed to children under 13. We do not knowingly collect personal information from children. If you believe a child has provided us with personal data, please contact us immediately.</p>
+    <h2>6. Children’s Privacy</h2>
+    <p>Our App is not directed to children under 13. We do not knowingly collect personal information from children. If you believe a child has provided us with personal data, please contact us immediately.</p>
 
-  <h2>7. Changes to This Policy</h2>
-  <p>We may update this Privacy Policy from time to time. Any changes will be posted here with the updated “Last updated” date.</p>
+    <h2>7. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy from time to time. Any changes will be posted here with the updated “Last updated” date.</p>
 
-  <h2>8. Contact Us</h2>
-  <p>If you have any questions, contact us at:</p>
-  <p><strong>Email:</strong> icableapp@homefiber.in</p>
+    <h2>8. Contact Us</h2>
+    <p>If you have any questions, contact us at:</p>
+    <p><strong>Email:</strong> icableapp@homefiber.in</p>
+  </main>
+
+  <footer>
+    &copy; 2025 iCable Operator App. All rights reserved.
+  </footer>
 </body>
 </html>
