--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - iCable Operator App</title>
+  <title>Privacy Policy - iCable App</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -128,7 +128,7 @@
   </main>
 
   <footer>
-    &copy; 2025 iCable Operator App. All rights reserved.
+    &copy; 2025 iCable. All rights reserved.
   </footer>
 </body>
 </html>
