--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -80,13 +80,13 @@
 </head>
 <body>
   <header>
-    <h1>Privacy Policy for iCable Operator App</h1>
+    <h1>Privacy Policy for iCable App</h1>
     <p>Last updated: November 8, 2025</p>
   </header>
 
   <main>
     <h2>1. Introduction</h2>
-    <p>Welcome to <strong>iCable Operator App</strong> (“we”, “our”, “us”). This Privacy Policy describes how we handle your information when you use our mobile application <strong>iCable Operator App</strong> (the “App”).</p>
+    <p>Welcome to <strong>iCable App</strong> (“we”, “our”, “us”). This Privacy Policy describes how we handle your information when you use our mobile application <strong>iCable App</strong> (the “App”).</p>
 
     <h2>2. Information We Collect</h2>
     <p>The App may collect the following types of information:</p>
